package com.xyb.a4factory.a3factorymethod;

class Cola implements Drink {

    @Override
    public String getDrinkName() {
        return "可乐";
    }
}
