package com.xyb.a4factory.a3factorymethod;

interface Drink {
    public String getDrinkName();
}
