package com.xyb.a4factory.a3factorymethod;

interface DrinkFactory {
    public Drink createDrink();
}
