package com.xyb.a4factory.a3factorymethod;

class Fanta implements Drink {

    @Override
    public String getDrinkName() {
        return "芬达";
    }
}
